# ApartmentManager

./: README.md
ApartmentManager/: CMakeLists.txt  main.cpp
ApartmentManager/Domain/: Expense.cpp
ApartmentManager/Headers/: Expense.h  Tests.h  UndoOperation.h
ApartmentManager/Repository/: Repository.h
ApartmentManager/Service/: Service.cpp  Service.h
ApartmentManager/Tests/: Tests.cpp
ApartmentManager/UI/: Console.cpp  Console.h
